[tool.poetry]
name = "pmatcher"
version = "0.1.12"
description = "Monadic election precinct matcher for gerrymandering data collection and research at MGGG"
authors = ["Max Fan <theinnovativeinventor@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
